# camera_pose

./: CMakeLists.txt  environment.yml  package.xml  setup.py
camera_pose/: detect.py  detect_node.py  marker_detector.py  pose_filter.py  util.py
cfg/: DetectorConfig.cfg
config/: camera_pose.yaml  marker_poses.yaml
launch/: cam_pose.launch  cam_pose.launch.py
marker/16h5-20-15/: all.odg
