<?xml version="1.0"?>
<package format="3">
  <name>camera_pose</name>
  <version>0.0.0</version>
  <description>ROS 2 port of camera pose estimation using AprilTags.</description>
  <maintainer email="nicolas.frick@studium.uni-hamburg.de">Nicolas Frick</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <exec_depend>realsense2_camera</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
